k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-app
  labels:
    app: movie-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-app
  template:
    metadata:
      labels:
        app: movie-app
    spec:
      containers:
        - name: movie-app
          image: react-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5173
