k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-app
spec:
  selector:
    app: movie-app
  ports:
    - port: 5173
      targetPort: 5173
