k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-app
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /movie-app
            pathType: Prefix
            backend:
              service:
                name: movie-app
                port:
                  number: 5173
